# ct-images-augmentation

./: .gitignore  .pre-commit-config.yaml  .ruff  Makefile  README.md  devbox.json  pyproject.toml  pyproject_arka.toml
.dvc/: config
conf/: config.yaml
data/input/ct_images/: .gitignore  image_1.nii.gz.dvc  image_10.nii.gz.dvc  image_11.nii.gz.dvc  image_12.nii.gz.dvc  image_13.nii.gz.dvc  image_14.nii.gz.dvc  image_15.nii.gz.dvc  image_16.nii.gz.dvc  image_17.nii.gz.dvc  image_18.nii.gz.dvc  image_19.nii.gz.dvc  image_2.nii.gz.dvc  image_20.nii.gz.dvc  image_21.nii.gz.dvc  image_22.nii.gz.dvc  image_23.nii.gz.dvc  image_24.nii.gz.dvc  image_25.nii.gz.dvc  image_26.nii.gz.dvc  image_27.nii.gz.dvc  image_28.nii.gz.dvc  image_29.nii.gz.dvc  image_3.nii.gz.dvc  image_30.nii.gz.dvc  image_31.nii.gz.dvc  image_32.nii.gz.dvc  image_33.nii.gz.dvc  image_34.nii.gz.dvc  image_4.nii.gz.dvc  image_5.nii.gz.dvc  image_6.nii.gz.dvc  image_7.nii.gz.dvc  image_8.nii.gz.dvc  image_9.nii.gz.dvc
experiments/: meta_diffuser.yaml  meta_vqgan.yaml  mini_gan.yaml  monai_autoencoder.yaml  monai_diffuser.yaml  simple_gan.yaml  vision_transformer.yaml  wgan.yaml
expermients/: simple_gan.yaml  vision_transformer.yaml
models/german_vqgan/checkpoints/: .gitignore  epoch=8-step=50-v1.ckpt.dvc  epoch=8-step=50-v2.ckpt.dvc  epoch=8-step=50.ckpt.dvc  last-v1.ckpt.dvc  last-v2.ckpt.dvc  last-v3.ckpt.dvc  last.ckpt.dvc
models/german_vqvae/checkpoints/: .gitignore  epoch=16-step=50-v1.ckpt.dvc  epoch=16-step=50.ckpt.dvc  epoch=2316-step=6950.ckpt.dvc  epoch=5149-step=15450.ckpt.dvc  epoch=8-step=50.ckpt.dvc  epoch=8499-step=25500.ckpt.dvc  epoch=93-step=280.ckpt.dvc  epoch=99-step=300.ckpt.dvc  last-v1.ckpt.dvc  last-v10.ckpt.dvc  last-v11.ckpt.dvc  last-v2.ckpt.dvc  last-v3.ckpt.dvc  last-v4.ckpt.dvc  last-v5.ckpt.dvc  last-v6.ckpt.dvc  last-v7.ckpt.dvc  last-v8.ckpt.dvc  last-v9.ckpt.dvc  last.ckpt.dvc
models/meta_diffuser/checkpoints/: .gitignore  epoch=12649-step=63250.ckpt.dvc  epoch=1380-step=6905.ckpt.dvc  epoch=230-step=1155.ckpt.dvc  epoch=40-step=205.ckpt.dvc  last-v1.ckpt.dvc  last-v2.ckpt.dvc  last-v3.ckpt.dvc  last.ckpt.dvc  meta_diffuser-v1.ckpt.dvc  meta_diffuser-v10.ckpt.dvc  meta_diffuser-v2.ckpt.dvc  meta_diffuser-v3.ckpt.dvc  meta_diffuser-v4.ckpt.dvc  (+7 more)
notebooks/: medical_vqgan.ipynb  meta_diffusion.ipynb  meta_vqgan.ipynb  monai_autencoder copy.ipynb  monai_autencoder.ipynb  monai_autoencoder_orig.ipynb  monai_vae.ipynb  notebook.ipynb
src/: 3D_CT_images_augmentation.py  dataset.py  main.py  test.py  utils.py
src/models/: ct_recon_vqgan.py  meta_diffuser.py  mini_gan.py  monai_autoencoder.py  monai_diffuser.py  rocgan.py  simple_gan.py  vision_transformer.py  vit.py  vqgan.py  wgan.py
(+33 files in other folders)
