[tool.poetry]
name = "ct-images-augmentation"
version = "0.1.0"
description = ""
authors = ["mateuszGorczany <gorczany@student.agh.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.13"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
pandas = "^2.1.3"
numpy = "^1.26.2"
torch = "^2.1.1"
monai = "^1.3.0"
torchsummary = "^1.5.1"


[tool.poetry.group.dev.dependencies]
dvc = {extras = ["gdrive"], version = "^3.30.1"}
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
