[project]
name = "ct-images-augmentation"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "mateuszGorczany", email = "mateusz.g64@interia.pl" }
]
dependencies = [
    "wandb>=0.17.0",
    "torch>=2.3.0",
    "monai>=1.3.0",
    "transformers>=4.40.2",
    "lightning>=2.2.4",
    "pydantic>=2.7.1",
    "hydra-core>=1.3.2",
    "dacite>=1.8.1",
    "matplotlib>=3.9.0",
    "nibabel>=5.2.1",
    "scikit-image>=0.24.0",
    "torchvision>=0.18.1",
    "monai-generative>=0.2.3",
    "lpips>=0.1.4",
]
readme = "README.md"
requires-python = "== 3.10.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipykernel>=6.29.4",
    "streamlit>=1.34.0",
    "tensorboard>=2.17.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
